--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     </string-array>
     <string name="title_activity_splash_acvitivy">SplashAcvitivy</string>
     <string name="title_activity_setup_wizard">SetupWizardActivity</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
