add jetpack compose
Signed-off-by: JamesfChen <hawks.jamesf@gmail.com>

--- a/components/hotel-module/bundle1/src/main/res/values/strings.xml
+++ b/components/hotel-module/bundle1/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">bundle1</string>
+    <string name="title_activity_test_compose">TestComposeActivity</string>
 </resources>
