--- a/components/home-module/src/main/res/values/strings.xml
+++ b/components/home-module/src/main/res/values/strings.xml
@@ -1,10 +1,11 @@
 <resources>
-    <string name="app_name">myhome</string>
-    <string name="static_disabled_message">被禁用了</string>
-    <string name="static_shortcut_long_label" >长 label</string>
-    <string name="static_shortcut_short_label" >短 label</string>
     <item name="tv_text" type="id" />
+    <string name="static_disabled_message">被禁用了</string>
+    <string name="static_shortcut_long_label">长 label</string>
+    <string name="static_shortcut_short_label">短 label</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="app_label">app_label</string>
+    <string name="search_hint">search_hint</string>
     <string-array name="weeks">
         <item>Sunday</item>
         <item>Monday</item>
