--- a/modules/main-bundle/src/main/res/values/strings.xml
+++ b/modules/main-bundle/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     </string-array>
     <string name="shake">摇一摇</string>
     <string name="lbs">定位地图</string>
+    <string name="shoe_model">鞋模型展示</string>
     <string name="livestream_gl">livestream_gl</string>
     <string name="livestream_vk">livestream_vk</string>
 </resources>
